# es-hotzone-trader

./: .gitignore  README.md  pyproject.toml
config/: default.yaml  replay_validation.yaml
scripts/: compliance_gate.py  generate_synth_replay.py
src/: __init__.py
src/bridge/: __init__.py  outbox.py  railway_bridge.py
src/cli/: __init__.py  __main__.py  commands.py  launchd.py  runtime_controller.py
src/config/: __init__.py  loader.py
src/engine/: __init__.py  decision_matrix.py  event_provider.py  market_context.py  regime.py  replay_runner.py  risk_manager.py  scheduler.py  trading_engine.py
src/execution/: __init__.py  executor.py
src/indicators/: __init__.py  atr.py  auction.py  rsi.py  vwap.py
src/market/: __init__.py  topstep_client.py
src/observability/: __init__.py  provenance.py  store.py
src/server/: __init__.py  debug_server.py  mcp_server.py
src/strategies/: __init__.py  base.py  flatten_strategy.py  orb_strategy.py  vwap_mr.py  vwap_trend.py
tests/: test_bridge.py  test_engine_core.py  test_matrix_engine.py  test_runtime_ops.py
